# autocpu

./: Cargo.toml  config.toml  flake.nix  rustfmt.toml  treefmt.nix
nix/: nixos.nix
res/: autocpu.service.in  org.stefanboca.AutoCpu.conf  org.stefanboca.AutoCpu.service.in
src/: args.rs  config.rs  cpuinfo.rs  daemon.rs  lib.rs  main.rs  power_state.rs  preset.rs
