[package]
name = "autocpu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", default-features = false, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage"
] }
eyre = "0.6.12"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
serde = { version = "1.0.228", default-features = false, features = ["std"] }
tokio = { version = "1.48.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "sync"
] }
toml = { version = "0.9.8", default-features = false, features = [
  "parse",
  "serde",
  "std"
] }
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings.git" }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
